Grid is now visible in screen. Means for resizing have been added but implementation still pending

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div id="ui">
+            <input id="grid-slider" type="range" min="16" max="64" value="16" step="16">
+        </div>
+        <div id="grid"></div>
+    </div>
 </body>
 </html>
