Color selection added successfully

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container">
         <div id="ui">
             <input id="grid-slider" type="range" min="16" max="64" value="16" step="16">
+            <input id="color-picker" type="color" value="#000000">
         </div>
         <div id="grid"></div>
     </div>
