--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div id="ui">
             <input id="grid-slider" type="range" min="16" max="64" value="16" step="16">
             <input id="color-picker" type="color" value="#000000">
+            <button id="clear-grid">Clear</button>
         </div>
         <div id="grid"></div>
     </div>
