Added mechanism to interchange coloring schemes

--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
         <div class="container">
             <div id="ui">
                 <label for="grid-slider">Resolution:</label>
-                <input id="grid-slider" class="ui-item" type="range" min="16" max="64" value="16" step="16">
+                <input id="grid-slider" type="range" min="16" max="64" value="16" step="16">
 
                 <label for="color-picker">Color:</label>
-                <input id="color-picker" class="ui-item" type="color" value="#000000">
+                <input id="color-picker" type="color" value="#edd2cb">
+                
+                <label>Random-color:</label>
+                <input type="button" id="random-color" class="ui-button" value="Activate">
 
-                <label for="clear-grid">Clear:</label>
-                <input type="button" id="clear-grid" value="Clear">
+                <label>Clear:</label>
+                <input type="button" id="clear-grid" class="ui-button" value="Clear">
             </div>
             <div id="grid"></div>
         </div><!--container-->
+        <a style="margin-bottom: 5px" href="https://github.com/Guevara-Bryan" target="_blank"><p>By: Bryan Guevara</p></a>
     </div> <!--main-->
 </body>
 </html>
