Gradient coloring added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 <label>Random-color:</label>
                 <input type="button" id="random-color" class="ui-button" value="Activate">
 
+                <label>Gradient:</label>
+                <input type="button" id="gradient-color" class="ui-button" value="Activate">
+
                 <label>Clear:</label>
                 <input type="button" id="clear-grid" class="ui-button" value="Clear">
             </div>
